Test/dafny0/GhostDatatypeConstructors-Resolution.dfy.expect
GhostDatatypeConstructors-Resolution.dfy(21,13): Error: a ghost discriminator is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(39,9): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(40,9): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(41,9): Error: a ghost variable is allowed only in specification contexts
GhostDatatypeConstructors-Resolution.dfy(77,16): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(77,16): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(77,16): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(96,25): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(96,25): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(96,25): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
GhostDatatypeConstructors-Resolution.dfy(126,4): Error: match expression is not compilable, because it mentions a constructor from a ghost-variant datatype
GhostDatatypeConstructors-Resolution.dfy(144,4): Error: match expression is not compilable, because it mentions a constructor from a ghost-variant datatype
GhostDatatypeConstructors-Resolution.dfy(156,7): Error: == can only be applied to expressions of types that support equality (got XY)
13 resolution/type errors detected in GhostDatatypeConstructors-Resolution.dfy
